syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service PixelInfo {
  rpc GetPixelInfoHistories (google.protobuf.Empty) returns (PixelInfoHistoriesDto);
  rpc CreatePixelInfos (CreatePixelInfosDto) returns (google.protobuf.Empty);
  rpc SubscribePixelInfosUpdates (google.protobuf.Empty) returns (stream FullPixelInfosDto);
}

message PixelInfoHistoriesDto {
  repeated PixelInfoHistoryDto Histories = 1;
}

message PixelInfoHistoryDto {
  PositionDto Position = 1;
  repeated PixelInfoDto History = 2;
}

message PixelInfoDto {
  google.protobuf.Timestamp CreationDate = 1;
  ColorDto Color = 2;
}

message CreatePixelInfosDto {
  repeated CreatePixelInfoDto PixelInfos = 1;
}

message CreatePixelInfoDto {
  PositionDto Position = 1;
  ColorDto Color = 2;
}

message FullPixelInfosDto {
  repeated FullPixelInfoDto PixelInfos = 1;
}

message FullPixelInfoDto {
  PositionDto Position = 1;
  google.protobuf.Timestamp CreationDate = 2;
  ColorDto Color = 3;
}

message PositionDto {
  int32 X = 1;
  int32 Y = 2;
}

message ColorDto {
  float R = 1;
  float G = 2;
  float B = 3;
}
